k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: furnique
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: furnique
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        # image: public.ecr.aws/s5q4d9h5/furnique:0.1
        image: DOCKER_IMAGE
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        # readinessProbe:
        #   tcpSocket:
        #     port: 5000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
        imagePullPolicy: Always
      serviceAccountName: default
